--- a/docs/i18n/en/docusaurus-plugin-content-docs/current/api/statistics.mdx
+++ b/docs/i18n/en/docusaurus-plugin-content-docs/current/api/statistics.mdx
@@ -202,4 +202,4 @@ print(f"Median salary: ${median_salary:,.2f}")
 
 - [Data Class](./data.mdx) - For loading data
 - [File Class](./file.mdx) - For file handling
-- [Başlarken](/docs/getting-started) - Complete usage examples
+- [User Guide](/docs/getting-started) - Complete usage examples
